<resources>
    <string name="app_name">Mini Network by RU</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign-up</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="hint_username">username</string>
    <string name="hint_phone_number">phone number</string>
    <string name="hint_email">email</string>
    <string name="hint_information">information</string>
    <string name="save">save</string>
    <string name="post_text">post text</string>
    <string name="send">send</string>
</resources>
