<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/im_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/person"
        android:layout_marginTop="@dimen/margin_standard"
        android:padding="@dimen/standard_padding"/>

    <EditText
        android:id="@+id/ed_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/im_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/norm_text_size"
        android:lines="1"
        android:maxLines="1"
        android:hint="@string/hint_username"
        android:drawableEnd="@drawable/edit"
        android:background="@drawable/shape"
        android:gravity="start"
        android:scrollbars="vertical"
        android:padding="@dimen/standard_padding"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"/>

    <EditText
        android:id="@+id/ed_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ed_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/norm_text_size"
        android:lines="1"
        android:maxLines="1"
        android:hint="@string/hint_phone_number"
        android:drawableEnd="@drawable/edit"
        android:background="@drawable/shape"
        android:gravity="start"
        android:scrollbars="vertical"
        android:padding="@dimen/standard_padding"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"/>

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ed_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/norm_text_size"
        android:lines="1"
        android:maxLines="1"
        android:hint="@string/hint_email"
        android:drawableEnd="@drawable/edit"
        android:background="@drawable/shape"
        android:gravity="start"
        android:scrollbars="vertical"
        android:padding="@dimen/standard_padding"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"/>

    <EditText
        android:id="@+id/ed_information"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ed_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/norm_text_size"
        android:lines="5"
        android:maxLines="5"
        android:hint="@string/hint_information"
        android:drawableEnd="@drawable/edit"
        android:background="@drawable/shape"
        android:gravity="start"
        android:scrollbars="vertical"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:padding="@dimen/standard_padding"
        android:layout_marginTop="@dimen/margin_standard"/>

     <Button
         android:id="@+id/btn_save"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/ed_information"
         android:layout_marginTop="@dimen/margin_standard"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="@dimen/margin_standard"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="@dimen/margin_standard"
         android:background="@color/colorPrimary"
         android:text="@string/save"
         android:textColor="@android:color/white"/>



</androidx.constraintlayout.widget.ConstraintLayout>